--- a/tracker/templates/tracker/base.html
+++ b/tracker/templates/tracker/base.html
@@ -17,17 +17,17 @@
            <b><a class="nav-link " href="">Add Expense</a></b>
           </li>
           <li class="nav-item">
-           <b><a class="nav-link " href="">Your Account</a></b>
+           <b><a class="nav-link " href="">{{user.username}}</a></b>
           </li>
           <li class="nav-item">
-            <b><a class="nav-link" href="">Logout</a></b>
+            <b><a class="nav-link" href="{% url 'user-logout' %}">Logout</a></b>
           </li>
           {% else %}
           <li class="nav-item">
-            <a class="nav-link" href="">Login</a>
+            <a class="nav-link" href="{% url 'user-login' %}">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">Register</a>
+            <a class="nav-link" href="{% url 'user-register' %}">Register</a>
           </li>
           {% endif %}
         </ul>
