--- a/tracker/templates/tracker/home.html
+++ b/tracker/templates/tracker/home.html
@@ -1,54 +1,67 @@
 {% extends 'tracker/base.html' %}
 {% block content %}
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-8 my-3">
-                <div class="table-responsive"  id="expense_table" >
-                    <table class="table">
-                        <thead class="thead-dark">
-                            <tr>
-                                <th scope="col">Sr.no</th>
-                                <th scope="col">Title</th>
-                                <th scope="col">Description</th>
-                                <th scope="col">Amount</th>
-                                <th scope="col">Category</th>
-                                <th scope="col">Created At</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for obj in expenses %}
-                                <tr>
-                                    <th scope="row">{{ forloop.counter }}</th>
-                                    <td>{{ obj.title }}</td>
-                                    {% if obj.description %}
-                                    <td>
-                                            {{ obj.description }}
-                                        </td>
-                                        {% else %}
-                                        <td class="text-muted">
-                                            no description provided
-                                        </td>
-                                        {% endif %}
-                                    
-                                    <td>{{ obj.amount }}</td>
-                                    <td>{{ obj.category }}</td>
-                                    <td>{{ obj.created_at }}</td>
-                                </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-            <div class="col-md-4 my-3">
-                {% load crispy_forms_tags %}
-                    <form method="post">
-                        {% csrf_token %}
-                        {{form|crispy}}
-                        <button id="submit_btn" type="submit" class="btn btn-primary">Submit</button>
-                </form>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-8 my-3">
+            <div class="table-responsive" id="expense_table">
+                <table class="table">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th scope="col">Sr.no</th>
+                            <th scope="col">Title</th>
+                            <th scope="col">Description</th>
+                            <th scope="col">Amount</th>
+                            <th scope="col">Category</th>
+                            <th scope="col">Created At</th>
+                            <th scope="col">Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody id="mytable">
+                        {% for obj in expenses %}
+                        <tr>
+                            <th scope="row">{{ forloop.counter }}</th>
+                            <td>{{ obj.title }}</td>
+                            {% if obj.description %}
+                            <td>
+                                {{ obj.description }}
+                            </td>
+                            {% else %}
+                            <td class="text-muted">
+                                no description provided
+                            </td>
+                            {% endif %}
+
+                            <td>{{ obj.amount }}</td>
+                            <td>{{ obj.category }}</td>
+                            <td>{{ obj.created_at }}</td>
+                            <td>
+                                <button
+                                    id="update_btn" class="btn btn-danger"
+                                    data-expense-id="{{ obj.id }}">Update
+                                </button>
+                                <button
+                                    id="delete_btn" class="btn btn-danger"
+                                    data-expense-id="{{ obj.id }}">Delete
+                                </button>
+                            </td>
+                        </tr>
+                        {% endfor %}
+
+
+                    </tbody>
+                </table>
             </div>
         </div>
+        <div class="col-md-4 my-3">
+            {% load crispy_forms_tags %}
+            <form method="post">
+                {% csrf_token %}
+                {{form|crispy}}
+                <button id="submit_btn" type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
     </div>
-    <script src="static/tracker/index.js"></script>
+</div>
+<script src="static/tracker/index.js"></script>
 
 {% endblock content %}
