--- a/tracker/templates/tracker/home.html
+++ b/tracker/templates/tracker/home.html
@@ -3,8 +3,8 @@
 <div class="d-flex justify-content-center">
     <h2>Your Expenses
     </h2>
-        <button type="button" class="btn btn-primary" data-url="{% url 'create' %}" id="create-btn">
-            Add a new Expense
+        <button type="button" class="btn btn-primary mx-3" data-url="{% url 'create' %}" id="create-btn">
+            Add a new Transaction
         </button>
         <div class="modal fade" id="formModel" tabindex="-1" role="dialog" aria-labelledby="createFormTitle"
         aria-hidden="true">
