--- a/tracker/templates/tracker/home.html
+++ b/tracker/templates/tracker/home.html
@@ -1,39 +1,49 @@
 {% extends 'tracker/base.html' %}
 {% block content %}
-<div class="d-flex justify-content-center">
-    <h2>Your Expenses
-    </h2>
-        <button type="button" class="btn btn-primary mx-3" data-url="{% url 'create' %}" id="create-btn">
-            Add a new Transaction
-        </button>
-        <div class="modal fade" id="formModel" tabindex="-1" role="dialog" aria-labelledby="createFormTitle"
+
+<div class="container-fluid m-4">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <h2> Welcome {{user.username}}, <br> This is <br> your Transaction Logs</h2>
+            </div>
+            <div class="col-md-6 text-right " id="sum-div">
+              {% include 'tracker/sums.html' %}
+            </div>
+            <button type="button" class="btn btn-secondary" data-url="{% url 'create' %}" id="create-btn">
+                Add a new Transaction
+            </button>
+        </div>
+    </div>
+
+
+    <div class="modal fade" id="formModel" tabindex="-1" role="dialog" aria-labelledby="createFormTitle"
         aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                    </div>
-            </div>
+            <div class="modal-content"></div>
         </div>
-</div>
-</div>
-<div class="d-flex justify-content-center">
-    <div class="col-md-10 m-3">
-        <div class="table-responsive">
-            <table class="table" id="expense-table">
-                <thead class="thead-dark">
-                    <tr>
-                        <th scope="col">Sr.no</th>
-                        <th scope="col">Title</th>
-                        <th scope="col">Description</th>
-                        <th scope="col">Amount</th>
-                        <th scope="col">Category</th>
-                        <th scope="col">Created At</th>
-                        <th scope="col">Actions</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% include 'tracker/expense_table.html' %}
-                </tbody>
-            </table>
+    </div>
+
+    <div class="container-fluid row justify-content-center">
+        <div class="col-md-10 mt-3">
+            <div class="table-responsive">
+                <table class="table" id="expense-table">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th scope="col">Sr.no</th>
+                            <th scope="col">Title</th>
+                            <th scope="col">Description</th>
+                            <th scope="col">Amount</th>
+                            <th scope="col">Category</th>
+                            <th scope="col">Created At</th>
+                            <th scope="col">Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% include 'tracker/expense_table.html' %}
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
