--- a/charts/templates/charts/index.html
+++ b/charts/templates/charts/index.html
@@ -1,42 +1,36 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Expense Chart</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-</head>
-<body>
-    <canvas id="expense-chart"></canvas>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            fetch("{% url 'expense-chart-data' %}")
-            .then(response => response.json())
-            .then(data => {
-                const chartData = data.map(obj => ({
-                    label: obj.category__name,
-                    data: [obj.total_amount],
-                    backgroundColor: 'rgba(75, 192, 192, 0.2)',
-                    borderColor: 'rgba(75, 192, 192, 1)',
-                    borderWidth: 1
-                }));
+{% extends 'tracker/base.html' %}
 
-                const ctx = document.getElementById('expense-chart').getContext('2d');
-                new Chart(ctx, {
-                    type: 'bar',
-                    data: {
-                        labels: ['Expenses'],
-                        datasets: chartData
-                    },
-                    options: {
-                        scales: {
-                            y: {
-                                beginAtZero: true
-                            }
-                        }
-                    }
-                });
-            });
-        });
-    </script>
-</body>
-</html>
+{% block content %}
+  <div id="container" style="width: 75%;">
+    <canvas id="bar"></canvas>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+  <script>
+
+    var config = {
+      type: 'bar',
+      data: {
+        datasets: [{
+          data: {{ data|safe }},
+          backgroundColor: [
+            '#696969', '#808080', '#A9A9A9', '#C0C0C0', '#D3D3D3'
+          ],
+          label: 'Amount'
+        }],
+        labels: {{ labels|safe }}
+      },
+      options: {
+        responsive: true
+      }
+    };
+
+    window.onload = function() {
+      var ctx = document.getElementById('bar').getContext('2d');
+      window.myPie = new Chart(ctx, config);
+    };
+
+  </script>
+
+{% endblock %}
