--- a/tracker/templates/tracker/create_form.html
+++ b/tracker/templates/tracker/create_form.html
@@ -3,7 +3,7 @@
 
             <form method="post"  action="{% url 'create' %}" class="create-form">
             <div class="modal-header">
-                <h5 class="modal-title" id="createFormTitle">Modal Title</h5>
+                <h5 class="modal-title" id="createFormTitle">Add a</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -11,6 +11,7 @@
             <div class="modal-body">
                     {% csrf_token %}
                     {{form|crispy}}
+                    <a href="{% url 'category' %}">Create a new category</a>
                     <button type="submit" class="btn btn-primary">Save Changes</button>
                 </div>
                 <div class="modal-footer">
