--- a/tracker/templates/tracker/update_form.html
+++ b/tracker/templates/tracker/update_form.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
             <form method="post" action="{% url 'update' form.instance.id%}" class="update-form">
             <div class="modal-header">
-                <h5 class="modal-title" id="updateFormTitle">Modal Title</h5>
+                <h5 class="modal-title" id="updateFormTitle">Update a Transaction</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -10,6 +10,8 @@
             <div class="modal-body">
                     {% csrf_token %}
                     {{form|crispy}}
+                    <a href="{% url 'category' %}">Create a new category</a>
+
                     <button type="submit" class="btn btn-primary">Save Changes</button>
                 </div>
                 <div class="modal-footer">
