--- a/tracker/templates/tracker/base.html
+++ b/tracker/templates/tracker/base.html
@@ -16,7 +16,7 @@
         <ul class="navbar-nav ml-auto">
           {% if request.user.is_authenticated %}
           <li class="nav-item">
-           <b><a class="nav-link " href="">{{user.username}}</a></b>
+           <b><a class="nav-link " href="{% url 'user-profile' user.id %}">Expense Data</a></b>
           </li>
           <li class="nav-item">
             <b><a class="nav-link" href="{% url 'user-logout' %}">Logout</a></b>
