--- a/tracker/templates/tracker/create_form.html
+++ b/tracker/templates/tracker/create_form.html
@@ -12,7 +12,7 @@
                     {% csrf_token %}
                     {{form|crispy}}
                     <a href="{% url 'category' %}">Create a new category</a>
-                    <button type="submit" class="btn btn-primary">Save Changes</button>
+                    <button type="submit" class="btn btn-primary"> Add Transaction</button>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
