--- a/charts/templates/charts/charts.html
+++ b/charts/templates/charts/charts.html
@@ -4,17 +4,21 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-6">
+      <h3>Debit</h3>
       <canvas id="bar"></canvas>
     </div>
     <div class="col-md-6">
+      <h3>Credit</h3>
       <canvas id="bar2"></canvas>
     </div>
   </div>
   <div class="row">
     <div class="col-md-6">
+      <h3>Credit based on categories</h3>
       <canvas id="bar3"></canvas>
     </div>
     <div class="col-md-6">
+      <h3>Debit based on categories</h3>
       <canvas id="bar4"></canvas>
     </div>
   </div>
