--- a/charts/templates/charts/charts.html
+++ b/charts/templates/charts/charts.html
@@ -1,7 +1,7 @@
 {% extends 'tracker/base.html' %}
 
 {% block content %}
-<div class="container-fluid">
+<div class="container-fluid" >
   <div class="row">
     <div class="col-md-6">
       <h3>Debit</h3>
@@ -14,11 +14,11 @@
   </div>
   <div class="row">
     <div class="col-md-6">
-      <h3>Credit based on categories</h3>
+      <h3>Debit based on categories</h3>
       <canvas id="bar3"></canvas>
     </div>
     <div class="col-md-6">
-      <h3>Debit based on categories</h3>
+      <h3>Credit based on categories</h3>
       <canvas id="bar4"></canvas>
     </div>
   </div>
@@ -31,9 +31,7 @@
     data: {
       datasets: [{
         data: {{ debited_amt|safe }},
-        backgroundColor: [
-          '#CD1818', '#CD1818', '#CD1818', '#CD1818', '#CD1818'
-        ],
+        backgroundColor:'#CD1818',
         label: 'Amount',
         maxBarThickness: 25
       }],
@@ -49,10 +47,7 @@
     data: {
       datasets: [{
         data: {{ credited_amt|safe }},
-        backgroundColor: [
-          '#116D6E', '#116D6E', '#116D6E', '#116D6E', '#116D6E'
-
-        ],
+        backgroundColor: '#116D6E',
         label: 'Amount',
         maxBarThickness: 25
       }],
@@ -69,7 +64,8 @@
       datasets: [{
         data: {{ category_sums|safe }},
         backgroundColor: [
-          '#61764B', '#C8DBBE', '#9BA17B', '#CFB997', '#FAD6A5'
+        '#E74646', '#FA9884', '#CE5959', '#FFE5CA', '#FFF3E2'
+
         ],
         label: 'Amount',
         maxBarThickness: 25
@@ -87,8 +83,7 @@
       datasets: [{
         data: {{ category_sums2|safe }},
         backgroundColor: [
-        '#E74646', '#FA9884', '#CE5959', '#FFE5CA', '#FFF3E2'
-
+        '#61764B', '#C8DBBE', '#9BA17B', '#CFB997', '#FAD6A5'
         ],
         label: 'Amount',
         maxBarThickness: 25
