--- a/tracker/templates/tracker/base.html
+++ b/tracker/templates/tracker/base.html
@@ -6,15 +6,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
       integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <title>Expense Tracker</title>
+    <title>SpendWise</title>
   </head>
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="{% url 'tracker-home' %}">Expense Tracker App </a>
+      <a class="navbar-brand" href="{% url 'tracker-home' %}">SpendWise</a>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           {% if request.user.is_authenticated %}
+          <li class="nav-item">
+           <b><a class="nav-link " href="{% url 'tracker-home' %}">Home</a></b>
+          </li>
           <li class="nav-item">
            <b><a class="nav-link " href="{% url 'user-profile' user.id %}">Expense Data</a></b>
           </li>
